language-server/src/tests/snapshots/gleam_language_server__tests__completion__imported_module_function.snap
---
source: language-server/src/tests/completion.rs
expression: "\nimport dep\n"
---
|
import dep


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
dep.wobble
  kind:   Function
  detail: fn() -> Nil
  sort:   4_dep.wobble
  desc:   app
  edits:
    [1:0-1:0]: "dep.wobble"
