language-server/src/tests/snapshots/gleam_language_server__tests__completion__imported_type_cursor_after_dot_other_matching_modules.snap
---
source: language-server/src/tests/completion.rs
expression: "import dep\nimport dep2\n\npub fn wibble(\n  _: dep.Zoo,\n) -> Nil {\n  Nil\n}\n"
---
import dep
import dep2

pub fn wibble(
  _: dep.Zoo|,
) -> Nil {
  Nil
}


----- Completion content -----
dep.Zoo
  kind:   Class
  detail: Type
  sort:   4_dep.Zoo
  edits:
    [4:5-4:12]: "dep.Zoo"
