language-server/src/tests/snapshots/gleam_language_server__tests__completion__imported_type_cursor_after_dot_other_modules.snap
---
source: language-server/src/tests/completion.rs
expression: "import dep\n\npub fn wibble(\n  _: dep.Zoo,\n) -> Nil {\n  Nil\n}\n"
---
import dep

pub fn wibble(
  _: dep.Zoo|,
) -> Nil {
  Nil
}


----- Completion content -----
dep.Zoo
  kind:   Class
  detail: Type
  sort:   3_dep.Zoo
