language-server/src/tests/snapshots/gleam_language_server__tests__completion__imported_unqualified_public_enum.snap
---
source: language-server/src/tests/completion.rs
expression: "\nimport dep.{Left}\n"
---
|
import dep.{Left}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Left
  kind:   EnumMember
  detail: Direction
  sort:   4_Left
  desc:   app
  edits:
    [1:0-1:0]: "Left"
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
dep.Left
  kind:   EnumMember
  detail: Direction
  sort:   4_dep.Left
  desc:   app
  edits:
    [1:0-1:0]: "dep.Left"
dep.Right
  kind:   EnumMember
  detail: Direction
  sort:   4_dep.Right
  desc:   app
  edits:
    [1:0-1:0]: "dep.Right"
