language-server/src/tests/snapshots/gleam_language_server__tests__completion__internal_modules_from_same_package_are_included.snap
---
source: language-server/src/tests/completion.rs
expression: "import gleam\n\npub fn main() {\n  0\n}"
---
|import gleam

pub fn main() {
  0
}


----- Completion content -----
app/internal
  kind:   Module
  edits:
    [0:7-0:12]: "app/internal"
